logging works